--- a/css/pages/about.scss
+++ b/css/pages/about.scss
@@ -148,6 +148,28 @@ main {
     flex-flow: column nowrap;
     width: 100%;
     max-width: 1100px;
+    &:first-of-type {
+        section {
+            &:nth-of-type(1) {
+                .images-wrapper .line--mobile path {
+                    stroke-dashoffset: 511px;
+                    stroke-dasharray: 511px;
+                }
+            }
+            &:nth-of-type(2) {
+                .images-wrapper .line--mobile path {
+                    stroke-dashoffset: 711px;
+                    stroke-dasharray: 711px;
+                }
+            }
+            &:nth-of-type(3) {
+                .images-wrapper .line--mobile path {
+                    stroke-dashoffset: 752px;
+                    stroke-dasharray: 752px;
+                }
+            }
+        }
+    }
     section {
         display: flex;
         flex-flow: column nowrap;
@@ -175,10 +197,6 @@ main {
                     top: auto;
                     left: auto;
                     transform: none;
-                    path {
-                        stroke-dashoffset: 511px;
-                        stroke-dasharray: 511px;
-                    }
                 }
             }
         }
@@ -201,12 +219,6 @@ main {
                         transform: translate(25%, -25%);
                     }
                 }
-                .line--mobile {
-                    path {
-                        stroke-dashoffset: 711px;
-                        stroke-dasharray: 711px;
-                    }
-                }
             }
         }
         &:nth-of-type(3) {
@@ -226,12 +238,6 @@ main {
                         left: 0;
                         bottom: 0;
                         transform: translate(-25%, 0);
-                    }
-                }
-                .line--mobile {
-                    path {
-                        stroke-dashoffset: 752px;
-                        stroke-dasharray: 752px;
                     }
                 }
             }
